--- a/_posts/2016-12-3-Scala函数式编程(一).md
+++ b/_posts/2016-12-3-Scala函数式编程(一).md
@@ -2,12 +2,16 @@
 layout: post
 categories: scala
 ---
-#函数式编程简介
+
+函数式编程简介
+=============
 只用pure function来开发程序,没有side effect的函数称为pure function,如果一个函数除了返回值外还产生了其他效果,那么它就是一个有side effect的函数.
 
 functional programming is a restriction on how we write programs, but not on what programs we can express.
 函数式编程是一种方法
-##有side effect的函数举例
+
+有side effect的函数举例
+----------------------
 ```scala
 class Cafe {
   def buyCoffee(cc: CreditCard): Coffee = {
@@ -18,7 +22,9 @@ class Cafe {
 }
 ```
 这个函数不仅return一杯咖啡,在`cc.charge`方法里可能调用了银行的接口,而且可能在内部系统持久化了一条记录.
-##pure function方式的实现
+
+pure function方式的实现
+-----------------------
 ```scala
 class Cafe {
   def buyCoffee(cc: CreditCard): (Coffee, Charge) = {
@@ -36,6 +42,7 @@ case class Charge(cc: CreditCard, amount: Double) {
 }
 ```
 这种实现方式有什么好处: 可以方便编写测试用的CreditCardMock(不用实际调用银行的接口)来进行测试.另外如果有购买多杯咖啡或者购买其他饮料,最后店员就可以统一结账,而不用每次购买都刷信用卡产生一笔交易服务费给信用卡公司.实现方式如下:
+
 ```scala
 def buyCoffees(cc: Credit, n: Integer) (List[Coffee], Charge) = {
   val purchases: List[(Coffee, Charge)] = List.fill(n)(buyCoffee(cc))
@@ -44,7 +51,9 @@ def buyCoffees(cc: Credit, n: Integer) (List[Coffee], Charge) = {
 }
 ```
 利用这种方法可以将任何有side effect的函数的side effect推到程序的最外层.函数式程序经常是只包含pure function的核心,以及一层用来处理side effect的逻辑.
-##到底什么是pure function
+
+到底什么是pure function
+----------------------
 **定义Referential transparency**
 
 **e是一个表达式,如果对所有的的程序p执行如下操作不改变p的意义,那么称e是Referential transparency的:将程序p中所有出现e的地方用e的计算结果来代替**
