--- a/_posts/2016-12-3-Scala函数式编程(一).md
+++ b/_posts/2016-12-3-Scala函数式编程(一).md
@@ -28,16 +28,21 @@ pure function方式的实现
 ```scala
 class Cafe {
   def buyCoffee(cc: CreditCard): (Coffee, Charge) = {
+    // val声明一个不可变的变量
     val cup = new Coffee()
     (cup, Charge(cc, cup.price))
   }
 }
 
+// case class有一个主构造器,它的参数列表跟在classname后面
+// 这些参数成为了class的public的,不可变的field.而且可以通过"."操作符访问
 case class Charge(cc: CreditCard, amount: Double) {
   def combine(other: Charge): Charge =
     if (cc == other.cc)
+      // case class的实例的创建不需要用new关键字,只用后面跟上主构造器的参数列表即可
       Charge(cc, amount + cc.amount)
     else
+      // 后续章节会介绍函数式编程处理异常的方式
       throw new Exception("不能合并不同信用卡的费用")
 }
 ```
