--- a/_posts/2016-12-3-Scala函数式编程(二).md
+++ b/_posts/2016-12-3-Scala函数式编程(二).md
@@ -76,3 +76,26 @@ object App {
 
 Polymorphic functions
 ----------------------
+```scala
+object App {
+  def findFirst[A](list: Array[A], f: A => Boolean): Int = {
+    // loop是closure
+    // a closure is a function together with a referencing environment for the non-local variables of that function.
+    // A closure allows a function to access variables outside its immediate lexical scope.
+    // 在这里在loop内部引用了外部变量list
+    @tailrec
+    def loop(n: Int): Int =
+      if (n >= list.length) -1
+      else if (f(list(n))) n  // 在内部函数里引用了外部list变量,就像在定义Int的表达式里引用了另一个变量一样
+      else loop(n + 1)
+
+    loop(0)
+  }
+
+  def main(args: Array[String]): Unit = {
+    // anonymous function或称为function literal
+    // 至少为x,或者findFirst指明类型
+    println(findFirst(Array(1, 3, 5), (x: Int) => x == 5))
+  }
+}
+```
