--- a/_posts/2017-12-22-第5章-机器学习基础.md
+++ b/_posts/2017-12-22-第5章-机器学习基础.md
@@ -6,6 +6,12 @@ categories: AI
 机器学习基础
 =============
 
+5.1 学习算法
+---------------------
+### 5.1.3 The Experience, E
+Design Matrix: 一种用来描述数据集的方法，每行包含一个example，每列分别对应一个feature。
+### 5.2.2 Regularization
+Regularization 定义为任何对学习算法的修改，而且目标不是为了减少Training Error而是为了降低Generalization Error。
 
 5.2 容量，Overfitting和Underfitting
 ----------------------
