--- a/_posts/2018-3-27-第2章-随机变量及其分布.md
+++ b/_posts/2018-3-27-第2章-随机变量及其分布.md
@@ -3,17 +3,17 @@ layout: post
 categories: math
 ---
 
-随机变量及其分布
-=============
-小结
-------
+# 随机变量及其分布
+
+## 小结
+
 随机变量\\(X=X(e)\\)是定义在样本空间\\(S=\\{e\\}\\)的实值单值函数，也就是说它是随机试验结果的函数。它的取值有一定的概率，所以它和普通函数有本质的差异。
 
 一个随机变量，如果他的所有可能的值是有限个，或可列无限个，这种随机变量成为离散随机变量。离散随机变量的统计规律性经常用分布律来描述
 
-$$P\{X=x_k\}=p_k,k=1,2,...$$
+$$P\{X=x_k\}=p_k,\ k=1,2,...$$
 
 对于非离散型随机变量，经常用分布函数来描述
 
-$$F\left(x\right)=P\{X\leq x\},-\infty<x<\infty$$
+$$F\left(x\right)=P\{X\leq x\},\ -\infty<x<\infty$$
 
