--- a/_posts/2016-12-3-Scala函数式编程(二).md
+++ b/_posts/2016-12-3-Scala函数式编程(二).md
@@ -3,8 +3,8 @@ layout: post
 categories: scala
 ---
 
-Scala的函数式编程
-================
+# Scala的函数式编程
+
 要点:
 * 如何定义Singleton的Class
 * 如何定义一个Class的member
@@ -13,8 +13,8 @@ Scala的函数式编程
 * Tail Recursive的函数需要满足什么条件
 * Polymorphic functions
 
-Scala程序示例
---------------
+## Scala程序示例
+
 ```scala
 // object 关键字定义了类的同时定义了这个类的唯一实例
 object App {
@@ -42,8 +42,8 @@ Scala中没有操作符的概念,`2 + 3`是`2.+(3)`的简写,`+`是一个Int的m
 
 `import MyModule._`执行后MyModule所有的非private的member可以通过member来直接引用而不需`.`操作符.
 
-Higher-order functions
-----------------------
+## Higher-order functions
+
 ```scala
 object App {
   def fact(n: Int): Int = {
@@ -74,8 +74,8 @@ object App {
 }
 ```
 
-Polymorphic functions
-----------------------
+## Polymorphic functions
+
 ```scala
 object App {
   def findFirst[A](list: Array[A], f: A => Boolean): Int = {
