--- a/_posts/2018-3-29-吴恩达机器学习视频笔记.md
+++ b/_posts/2018-3-29-吴恩达机器学习视频笔记.md
@@ -41,7 +41,7 @@ Hypothesis：\\(h_{\\theta} = \\theta _0 + \\theta _1 x + \\theta _2 x^2 + \\the
 \\(y_1 = x, y_2 = x^2, y_3 = x^3\\)
 
 
-#### 逻辑回归
+#### 逻辑回归（2元分类问题）
 
 逻辑回归用于解决分类问题，对于2分类问题（分类结果为0或者1），我们在线性回归的模型（假设函数）外层，增加一个sigmoid函数，使函数值映射在(0, 1)区间，
 我们将这个得到的函数值解释为将x映射到\\(y = 1\\)的概率，即\\(P(y=1 | x;\\theta)\\)。逻辑回归的假设函数的表示形式如下：
@@ -55,3 +55,16 @@ Cost：\\(J(\\theta) = \\frac{1}{m} \\sum_{i=1}^m Cost(h_\\theta (x^{(i)}),y^{(i
 其中：\\(Cost(h_\\theta (x^{(i)}),y^{(i)}) = -y \\ln {(h_\\theta (x))} - (1 - y)\\ln {(1 - {h_\\theta (x)})}\\) 注意其中y只可能取0，或者1
 
 使用这种形式的Cost函数，梯度下降算法将和线性回归一致（因为计算导数的公式一致）。
+
+
+#### 多元分类问题
+
+多元分类问题可以分解为多个2元（1对其余）分类问题。1对其余的方法陈述如下：
+
+为每个分类\\(i\\)构造一个逻辑分类器\\(h_\\theta ^{(i)} (x)\\)。这个\\(h\\)的意义为\\(y = i\\)的概率。
+即：\\(h_\\theta ^{(i)} (x) = P(y = i |x;\\theta) (i = 1, 2, 3)\\)。
+
+当有一个新的输入\\(x\\)，用以下方法做出预测：选择分类\\(i\\)使得\\(\\max h_\\theta ^{(i)} (x)\\)。
+
+对于简单的情况，特征输入不是很多的情况，可以用以上的分类方法做出预测，但是，如果输入特征非常多（比如图像的识别，每个像素是一个特征，另外如果要达到一些非线性的效果，还要增加这些特征值的幂的组合），
+以上的分类方法的计算量太大导致上面的方法不再适用。下面介绍的神经网络可以用于这类问题的分类。
