--- a/_posts/2018-3-29-吴恩达机器学习视频笔记.md
+++ b/_posts/2018-3-29-吴恩达机器学习视频笔记.md
@@ -68,3 +68,16 @@ Cost：\\(J(\\theta) = \\frac{1}{m} \\sum_{i=1}^m Cost(h_\\theta (x^{(i)}),y^{(i
 
 对于简单的情况，特征输入不是很多的情况，可以用以上的分类方法做出预测，但是，如果输入特征非常多（比如图像的识别，每个像素是一个特征，另外如果要达到一些非线性的效果，还要增加这些特征值的幂的组合），
 以上的分类方法的计算量太大导致上面的方法不再适用。下面介绍的神经网络可以用于这类问题的分类。
+
+
+#### 深度神经网络可以解决复杂问题的直观解释
+
+And, Or可以用2分类方法单层神经网络（线性回归）的方式解决，考虑对于XOR的问题怎么解决，观察到如下关系：
+
+$$A \oplus B = (\lnot (A \land B)) \lor ((\lnot A) \land (\lnot B))$$
+
+可以通过多层神经元（将前一层的输出作为后一层的输入值）的方式解决XOR操作的问题。这也解释了单个神经元为什么具有记忆的功能。
+
+
+#### 神经网络的COST函数
+
