--- a/_posts/2018-3-29-吴恩达机器学习视频笔记.md
+++ b/_posts/2018-3-29-吴恩达机器学习视频笔记.md
@@ -30,6 +30,14 @@ repeat until convergence {
 这种梯度下降算法成为Batch Gradient Descent，因为每一步计算用到了训练集里面的所有数据。
 
 
+#### 如何Debug梯度下降算法和选择学习率
+
+\\(J(\\theta)\\) 在每次迭代后都会减少标志着算法的正确。
+
+如果学习率\\(\\alpha\\)足够小，梯度下降算法总能保证代价函数的值每次迭代都减少。
+
+另外，尽量使输入值通过Feature Scaling将输入值限定在\\(-1\\le x_i \\le 1\\)的范围内，同时，学习率可以依照\\(0.001, 0.003, 0.01, 0.03, ...\\)的顺序尝试，找到合适的学习率。
+
 #### 多项式回归
 
 举例说明，如果假设函数是如下的形式：
