--- a/_posts/2018-3-29-吴恩达机器学习视频笔记.md
+++ b/_posts/2018-3-29-吴恩达机器学习视频笔记.md
@@ -62,6 +62,8 @@ Cost：\\(J(\\theta) = \\frac{1}{m} \\sum_{i=1}^m Cost(h_\\theta (x^{(i)}),y^{(i
 
 其中：\\(Cost(h_\\theta (x^{(i)}),y^{(i)}) = -y \\ln {(h_\\theta (x))} - (1 - y)\\ln {(1 - {h_\\theta (x)})}\\) 注意其中y只可能取0，或者1
 
+注意：\\(Cost(h_\\theta (x^{(i)}),y^{(i)}) \\approx - {(h_\\theta (x) - y)}^2\\)
+
 使用这种形式的Cost函数，梯度下降算法将和线性回归一致（因为计算导数的公式一致）。
 
 
@@ -89,3 +91,13 @@ $$A \oplus B = (\lnot (A \land B)) \lor ((\lnot A) \land (\lnot B))$$
 
 #### 神经网络的COST函数
 
+假设训练集有\\(m\\)条目，\\(L\\)是神经网络的层数，\\(s_l\\)为第\\(l\\)层神经元的个数，
+\\(K\\)为输出层神经元的个数（当K为1时，对应2元分类，K为k时对应k元分类器）。
+
+$$h_\Theta(x) \in \mathbb{R} ^K, (h_\Theta(x))_i=i^{th} 输出$$
+
+$$J(\Theta)=- \frac{1}{m} \lbrack \sum_{i=1}^{m} \sum_{k=1}^{K} y_k^{(i)} \ln {(h_\Theta(x^{i}))_k} + (1 - y_k^{(i)}) \ln {(1 - (h_\Theta(x^{i}))_k)} \rbrack$$
+
+可以用从输出层逐层往前计算的方式得到\\(\\frac{\\partial}{\\partial \\Theta _{i,j}} J(\\Theta) \\) 在当前训练集下的值。这个逐层递推的公式如下：
+
+$$$$
