--- a/_posts/2018-3-29-吴恩达机器学习视频笔记.md
+++ b/_posts/2018-3-29-吴恩达机器学习视频笔记.md
@@ -98,6 +98,4 @@ $$h_\Theta(x) \in \mathbb{R} ^K, (h_\Theta(x))_i=i^{th} 输出$$
 
 $$J(\Theta)=- \frac{1}{m} \lbrack \sum_{i=1}^{m} \sum_{k=1}^{K} y_k^{(i)} \ln {(h_\Theta(x^{i}))_k} + (1 - y_k^{(i)}) \ln {(1 - (h_\Theta(x^{i}))_k)} \rbrack$$
 
-可以用从输出层逐层往前计算的方式得到\\(\\frac{\\partial}{\\partial \\Theta _{i,j}} J(\\Theta) \\) 在当前训练集下的值。这个逐层递推的公式如下：
-
-$$$$
+可以用从输出层逐层往前计算的方式得到\\(\\frac{\\partial}{\\partial \\Theta _{i,j}} J(\\Theta) \\) 在当前训练集下的值。
