--- a/_posts/2018-3-29-吴恩达机器学习视频笔记.md
+++ b/_posts/2018-3-29-吴恩达机器学习视频笔记.md
@@ -99,3 +99,9 @@ $$h_\Theta(x) \in \mathbb{R} ^K, (h_\Theta(x))_i=i^{th} 输出$$
 $$J(\Theta)=- \frac{1}{m} \lbrack \sum_{i=1}^{m} \sum_{k=1}^{K} y_k^{(i)} \ln {(h_\Theta(x^{i}))_k} + (1 - y_k^{(i)}) \ln {(1 - (h_\Theta(x^{i}))_k)} \rbrack$$
 
 可以用从输出层逐层往前计算的方式得到\\(\\frac{\\partial}{\\partial \\Theta _{i,j}} J(\\Theta) \\) 在当前训练集下的值。
+
+
+#### overfitting
+
+overfitting是训练模型过程中经常出现的问题，overfitting的算法导致模型具有"高方差"，出现这种问题的原因是输入feature过多。可以通过视觉化模型的方式
+寻找合适的模型，或者通过减少feature的方式，如果不好减少feature，可以通过降低模型中参数的绝对值，这样就降低了每个feature对结果的影响，这就是正则化Cost函数的方式。
